--------------------------------------------------------------------------------
 Fusion 1.212 - June 30th, 2004
--------------------------------------------------------------------------------
- 06-24-04: Added Athena's @help command to ALBGM system. Only displays all lines if you're in debug mode, otherwise it only displays 1. It also truncates all lines to 15 characters. [Trihan]
- 06-24-04: Fixed #977 - Weapon Skill errors. Light Epsilon/Crusader Example. Skills dont remove. [AlexKreuz]
- 06-24-04: Removed DarkHelmet's "Monster does x damage" Debugs. *sigh*. [AlexKreuz]
- 06-24-04: Fixed #987 - Assassin Cross can't equip 2 weapons. Hopefully this works. [AlexKreuz]
- 06-24-04: Fixed #943 - Wizard Quest. Temp Global Vars were clared on save timer. [AlexKreuz]
- 06-24-04: Added Darkhelmet's fix for basereset. [Tsusai]
- 06-24-04: Removed DarkHelmet's "Skill Not Coded" Debugs. Don't confuse people, DH. [AlexKreuz]
- 06-24-04: Fixed #981 - Gungnir's Bash should not use SP. [AlexKreuz]
- 06-24-04: Added Monster Skills Cloaking and Grimtooth. [Darkhelmet]
- 06-24-04: Fixed Monster Damage Calculations for Skills vs Element. [Darkhelmet]
- 06-24-04: Fixed #983 - Monster FLEE miscalculated. VIT, not AGI, affected FLEE. [AlexKreuz]
- 06-23-04: Added Dye option to JCon Server Options page. [AlexKreuz]
- 06-23-04: Added Game Options to JCon. [AlexKreuz]
- 06-23-04: Fixed a small bug in #charskillpoint. [Trihan]
- 06-23-04: Added feature request #853 - New GM commands. [Trihan]
	    - #charblevel
	    - #charjlevel
	    - #charstatpoint
	    - #charskillpoint
- 06-22-04: Fixed [BD_RICHMANKIM] now affects experience gain. Wrong Chara Type. [AlexKreuz]
- 06-22-04: Fixed Job XP sharing bugged when two people attack same mob. [AlexKreuz]
- 06-22-04: Fixed MVP Bonus Experience Calculations. [AlexKreuz & Trihan]
- 06-22-04: Fixed #320 - guild.txt gcastle.txt pet.txt party.txt get emptied on heavy crash. [AlexKreuz]